--- a/client/index.html
+++ b/client/index.html
@@ -7,23 +7,20 @@
     <title>Weather Station</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-
 </head>
 
 <body ng-app="weatherStation">
     <div ng-include="'components/navbar/navbar.html'"></div>
     <div ui-view=""></div>
-
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-
     <script src="app/app.js"></script>
-    <script src="app/main/main.js"></script>
+    <script src="components/openWeather/openWeather.factory.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
-  
+    <script src="app/main/main.js"></script>
+    <script src="app/main/main.controller.js"></script>
 
 </body>
 
