--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,23 +1,37 @@
-<div class="col-sm-12 col-md-4">
+<div class="col-xs-12 col-sm-6 col-md-4">
     <h3 class="text-center">Weather
         <a ng-click="reverse=!reverse" class="sorting glyphicon  pull-right" ng-class="{'glyphicon-triangle-bottom':!reverse,'glyphicon-triangle-top':reverse}">
         </a>
     </h3>
     <div class="list-group">
         <a class="list-group-item" ng-class="{'active':item.isActive}" ng-click="showDetails(item)" ng-repeat="item in list | orderBy:'-temp':reverse">
-            <h3 class="pull-right">{{item.temp.toFixed(0)}}</h3>
+            <h3 class="pull-right">{{item.temp.toFixed(0)}} °C</h3>
             <h3>{{item.city}}</h3>
         </a>
     </div>
 </div>
 <br>
-<div class="col-sm-12 col-md-8">
-    <div class="panel panel-default">
+<div class="col-xs-12 col-sm-6 col-md-8">
+    <div ng-show="selected" class="panel panel-default">
         <div class="panel-heading">
-            <h1 class="panel-title">Panel title</h1>
+            <h3>{{selected.city}}</h3>
         </div>
         <div class="panel-body">
-            Panel content
+            <div class="col-md-6">
+                <h3 class="xb">
+                    <img src="http://openweathermap.org/img/w/{{selected.icon}}.png" class="img-responsive" alt="weather condition icon {{selected.currentCondition}}">
+                    {{selected.temp.toFixed(0)}} °C
+                </h3>
+                <h4><small class="text-right">Geo Coordinates (lat,lon): </small>{{selected.location.lat}}, {{selected.location.lon}}</h4>
+            </div>
+            <div class="col-md-6">
+                
+                <h4><small class="text-right">Current Condition: </small>{{selected.currentCondition}}</h4>
+                <h4><small class="text-right">Temp Max: </small>{{selected.tempMax.toFixed(0)}} °C</h4>
+                <h4><small class="text-right">Temp Max: </small>{{selected.tempMin.toFixed(0)}} °C</h4>
+                <h4><small class="text-right">Pressure: </small>{{selected.pressure.toFixed(0)}} hpa</h4>
+                <h4><small class="text-right">Humidity: </small>{{selected.humidity}} %</h4>
+            </div>
         </div>
     </div>
 </div>
